Fixed hero text color for dark mode

--- a/style.css
+++ b/style.css
@@ -89,6 +89,14 @@ body.dark-mode {
   color: #f5f5f5;
 }
 
+body.dark-mode #home h1 {
+  color: #ffffff;
+}
+
+body.dark-mode #home p{
+  color:  #cccccc;
+}
+
 body.dark-mode section {
   background-color: #1e1e1e;
 }
